terraform/lab-02/config/airflow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-ingress
  namespace: airflow # Namespace, w którym zainstalowany jest Airflow
  annotations:
    # Kong Proxy domyślnie nasłuchuje na HTTP
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx # Używamy tej samej klasy co dla dashboardu
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            # Domyślna nazwa usługi dla webserwera w charcie Airflow
            name: airflow-api-server
            port:
              # Domyślny port usługi webserwera
              number: 8080
