terraform/lab-02/config/vscode-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vscode-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-passthrough: "false"
    # Ponieważ Airflow ma teraz własny certyfikat samopodpisany, pomijamy weryfikację między Ingress a Podem
    nginx.ingress.kubernetes.io/proxy-ssl-verify: "false"
spec:
  ingressClassName: public
  tls:
    - secretName: airflow-tls-secret # Korzystamy z tego samego sekretu co Airflow, stworzonego w namespace default
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vscode-service
                port:
                  number: 8443
